2008-06-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph): Don't forget to draw a polyline even
	if it has only a single segment.
	Bugfix

2008-06-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c (draw_inside_color_smooth_box_postscript): Fix colour of
	the 2nd box in the colour box for negative palette in postscript
	output.
	SF Bug #2000751

2008-06-22  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c: Plot with vectors did not honor linestyles requested via
	'set style increment user'.

	* src/gplt_x11.c: Consolidate the fillstyle code into a single routine
	that is called both by fillbox and filledpolygon processing. This fixes
	a bug in which the fillstyle border was not applied to filled curves.

2008-06-17  Bastian Maerkisch  <bmaerkisch@web.de>
	* src/win/wgraph.c term/win.trm (WIN_set_color):  Preserve setting of
	dash type and linewidth when a new color is selected.
	Allow dash types with linewidth > 1.
	Bug #1863361

2008-06-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_margin) src/save.c (save_set_all) docs/gnuplot.doc:
	Add keyword "at" to absolute margin placement commands.
	The full form is now "set rmargin {at screen} 0.8".

2008-06-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics):  Interpret tic labels read from a data file as
	string constants rather than as formats.  Otherwise there are problems
	with labels containing the "%" character.

2008-06-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/hidden3d.c (store_polygon) src/mouse.c (event_motion):
	Replace a pair of assert() statements with a flag that prevents mouse
	interaction from further increasing the value of surface_zscale. This
	means you cannot trigger the error condition the asserts tried to guard
	against by moving the mouse.  You can still trigger it by setting the
	view to something unreasonable, but the previous patch may handle that.
	Bug #1728063
